--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,29 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 
+
+	<!-- ShiroFilter -->
+	<!-- <listener> <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class> 
+		</listener> <filter> <filter-name>ShiroFilter</filter-name> <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class> 
+		</filter> <filter-mapping> <filter-name>ShiroFilter</filter-name> <url-pattern>/*</url-pattern> 
+		</filter-mapping> -->
+	<!-- JfinalFilter -->
+
+	<!-- JfinalFilter -->
+	<filter>
+		<filter-name>JfinalFilter</filter-name>
+		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
+		<init-param>
+			<param-name>configClass</param-name>
+			<param-value>config.BaseConfig</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>JfinalFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- DruidWebStatFilter -->
 	<filter>
 		<filter-name>DruidWebStatFilter</filter-name>
 		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
@@ -18,27 +41,6 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>DruidWebStatFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
-
-	<!-- ShiroFilter -->
-	<!-- <listener> <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class> 
-		</listener> <filter> <filter-name>ShiroFilter</filter-name> <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class> 
-		</filter> <filter-mapping> <filter-name>ShiroFilter</filter-name> <url-pattern>/*</url-pattern> 
-		</filter-mapping> -->
-	<!-- JfinalFilter -->
-
-	<filter>
-		<filter-name>JfinalFilter</filter-name>
-		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
-		<init-param>
-			<param-name>configClass</param-name>
-			<param-value>config.BaseConfig</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>JfinalFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
