--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 				<devMode>true</devMode>
 				<log4j.rootLogger>DEBUG, stdout</log4j.rootLogger>
 				<web.jdbcDriver>com.mysql.jdbc.Driver</web.jdbcDriver>
-				<web.jdbcUrl>jdbc:mysql://192.168.23.4:3306/api</web.jdbcUrl>
+				<web.jdbcUrl>jdbc:mysql://192.168.23.2:3306/api</web.jdbcUrl>
 				<web.jdbcUser>root</web.jdbcUser>
 				<web.jdbcPassword>mysql4root</web.jdbcPassword>
 			</properties>
@@ -32,7 +32,7 @@
 				<devMode>false</devMode>
 				<log4j.rootLogger>INFO</log4j.rootLogger>
 				<web.jdbcDriver>com.mysql.jdbc.Driver</web.jdbcDriver>
-				<web.jdbcUrl>jdbc:mysql://192.168.23.4:3306/api</web.jdbcUrl>
+				<web.jdbcUrl>jdbc:mysql://192.168.23.2:3306/api</web.jdbcUrl>
 				<web.jdbcUser>root</web.jdbcUser>
 				<web.jdbcPassword>mysql4root</web.jdbcPassword>
 			</properties>
@@ -68,6 +68,11 @@
 			<artifactId>jfinal-plugin</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.dreamlu</groupId>
+			<artifactId>JFinal-event</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 		<!-- dom4j -->
 		<dependency>
 			<groupId>dom4j</groupId>
@@ -86,6 +91,11 @@
 			<version>1.7.7</version>
 		</dependency>
 		<!-- commons -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
