--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,6 @@ druid.default.maxPoolPreparedStatementPerConnectionSize=20
 druid.default.timeBetweenConnectErrorMillis=1000
 druid.default.filters=stat,wall
 
-#qas
-qas.hit = 2
-qas.str.notfound=\u6CA1\u6709\u627E\u5230\u76F8\u5173\u8D44\u6599
+#qa
+qa.hit = 2
+qa.str.notfound=Sorry, Can\'t find the answer.
