--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,13 +7,13 @@ log4j.appender.stdout.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-
 
 # Output to the File
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=${name}.log
+log4j.appender.file.File=logs/${name}.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-[Thread: %t]-[%C.%M()]: %m%n
 
 #Output to the DailyRollingFile
 log4j.appender.dailyRollingFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyRollingFile.DatePattern='.'yyyy-MM-dd
-log4j.appender.dailyRollingFile.File=${name}.log
+log4j.appender.dailyRollingFile.File=logs/${name}.log
 log4j.appender.dailyRollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.dailyRollingFile.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-[Thread: %t]-[%C.%M()]: %m%n
