--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.acxiom</groupId>
-	<artifactId>dataguru-robot</artifactId>
+	<groupId>com.dsdc</groupId>
+	<artifactId>mp</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>dataguru-robot</name>
+	<name>dsdc-mp</name>
 	<url>http://maven.apache.org</url>
 
 	<repositories>
@@ -32,9 +32,9 @@
 				<log.rootLogger>DEBUG,stdout</log.rootLogger>
 				<devMode>true</devMode>
 				<cacheEnabled>false</cacheEnabled>
-				<db.default.url>10.201.14.231:3306/dataguru_robot</db.default.url>
-				<db.default.user>cny</db.default.user>
-				<db.default.password>qwer1234</db.default.password>
+				<db.default.url>127.0.0.1:3306/dsdc_mp</db.default.url>
+				<db.default.user>root</db.default.user>
+				<db.default.password>root</db.default.password>
 				<db.default.dialect>mysql</db.default.dialect>
 				<db.default.driver>com.mysql.jdbc.Driver</db.default.driver>
 			</properties>
@@ -167,16 +167,6 @@
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-ehcache</artifactId>
 			<version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.ansj</groupId>
-			<artifactId>ansj_seg</artifactId>
-			<version>5.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nlpcn</groupId>
-			<artifactId>nlp-lang</artifactId>
-			<version>1.7.1</version>
 		</dependency>
 	</dependencies>
 
