--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,35 +20,17 @@
 		<filter-name>ShiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-	<filter>
-		<filter-name>RestyFilter</filter-name>
-		<filter-class>cn.dreampie.route.RestyFilter</filter-class>
-		<init-param>
-			<param-name>configClass</param-name>
-			<param-value>config.ApiConfig</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>RestyFilter</filter-name>
-		<url-pattern>/api/*</url-pattern>
-	</filter-mapping>
-
 	<filter>
 		<filter-name>JfinalFilter</filter-name>
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
 		<init-param>
 			<param-name>configClass</param-name>
-			<param-value>config.WechatConfig</param-value>
+			<param-value>config.Config</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>JfinalFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
 
 </web-app>
